changed the way js is loaded

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
 
 <!-------- js ------->
-    <script src="/assets/js/toggle_menu.js"></script>
-    <script src="/assets/js/age-check.js"></script>
+    <script src="assets/js/toggle_menu.js"></script>
+    <script src="assets/js/age_check.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const links = document.querySelectorAll("a.rotation-link");
