--- a/support.html
+++ b/support.html
@@ -30,6 +30,18 @@
         </div>
     </div>
     </header>
-    <script src="/assets/js/toggle_menu.js"></script>
+    <script>
+        var MenuItems = document.getElementById("MenuItems");
+        
+        MenuItems.style.maxHeight = "0px";
+        
+        function menutoggle(){
+            if(MenuItems.style.maxHeight == "0px"){
+                MenuItems.style.maxHeight = "500px";
+            } else {
+                MenuItems.style.maxHeight = "0px";
+            }
+        }
+    </script>
 </body>
 </html>
