done some stuff

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <div class="container navigation">
         <div class="navbar">
             <div class="logo">
-                <img src="assets/images/logotemp.png" width="70px">
-            </div>
+                <a href="#home"><img src="assets/images/logotemp.png" width="70px"></a>            </div>
             <i class="fa-solid fa-burger menu-icon" onclick="menutoggle()"></i>
             <nav>
                 <ul id="MenuItems">
