--- a/support.html
+++ b/support.html
@@ -14,7 +14,7 @@
     <div class="container navigation">
         <div class="navbar">
             <div class="logo">
-                <img src="assets/images/logotemp.png" width="70px">
+                <a href="index.html"><img src="assets/images/logotemp.png" width="70px"></a>
             </div>
             <i class="fa-solid fa-burger menu-icon" onclick="menutoggle()"></i>
             <nav>
