--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </p>
                 <a href="games.html" class="button hover">&#9733; Start Winning now! &#9733;</a>
             </div>
-            <div class="col-2">
+            <div class="col-2 home">
                 <a href="games.html" class = 'rotation-link'>
                 <img src="assets/images/rowimgtemp.png">
                 </a>
