--- a/shop.html
+++ b/shop.html
@@ -29,6 +29,47 @@
         </div>
     </div>
     </header>
+    <div class="container hero">
+        <div class="row">
+        <div class="col-2">
+            <img src="assets/images/betterthanthem.png" alt="">
+        </div>
+        <div class="col-2">
+            <h1>Welcome to the Casino Shop</h1>
+            <p>Discover exclusive skins, flairs, and badges to prove that you are better than everyone else</p>
+        </div>
+        </div>
+    </div>
+
+    <!-- Dice Skins div -->
+    <div class="container dice">
+        <h2 class="title">Popular Dice Skins</h2>
+        <div class="scrollmenu">
+            <!-- Example cards -->
+            <div class="card hover">
+                <img src="assets/images/dice/1.png" alt="Dice Skin 1">
+                <h1>Dice Skin 1</h1>
+                <p>Price: $0.99</p>
+                <button class="buy hover">Buy Now!</button>
+            </div>
+            <!-- Repeat for more dice -->
+        </div>
+    </div>
+
+    <!-- Flairs div -->
+    <div class="container flairs">
+        <h2 class="title">Flairs & Badges</h2>
+        <div class="scrollmenu">
+            <div class="card hover">
+                <img src="assets/images/flairs/gold.png" alt="Gold Flair">
+                <h1>Gold Flair</h1>
+                <p>Price: $1.49</p>
+                <button class="buy hover">Buy Now!</button>
+            </div>
+            <!-- Add more flairs here -->
+        </div>
+    </div>
+
     <script>
         var MenuItems = document.getElementById("MenuItems");
         
