--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 </head>
 
+
+
+
 <body>
     <div id="age-popup" class="popup-overlay">
         <div class="popup-box">
@@ -59,17 +62,17 @@
     <div class="container about">
         <h2 class="title" id = "about"> About Gambling</h2>
         <div class="row">
-            <a href="about.html">
+            <a href="about.html#reasons">
             <div class="col-3 bg-box">
                 <h1>The 10 best reasons why you should Gamble!!!</h1>
             </div>
             </a>
-            <a href="about.html">
+            <a href="about.html#dangers">
             <div class="col-3 bg-box">
                 <h1>Dangers of Gambling</h1>
             </div>
             </a>
-            <a href="about.html">
+            <a href="about.html#how-to-win">
             <div class="col-3 bg-box">
                 <h1>How to win at Gambling</h1>
             </div>
@@ -112,7 +115,11 @@
         </div>
     </div>
 
-
+    <footer class="site-footer">
+        <div class="container">
+            <p>&copy; 2025 Casino Royale Student Portfolio.  Gamble responsibly — or at least with style. <br> Max Barth, Marie-Juliette Krause, Emily Schell, Niklas Skopinski</p>
+        </div>
+    </footer>
 
 <!-------- js ------->
     <script>
