--- a/shop.html
+++ b/shop.html
@@ -31,7 +31,7 @@
     </header>
     <div class="container hero">
         <div class="row">
-        <div class="col-2">
+        <div class="col-2 home">
             <img src="assets/images/betterthanthem.png" alt="">
         </div>
         <div class="col-2">
