--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             <h1>Just keep at it, trust me.</h1>
             </div>
             <div class="col-2">
-            <img src="/assets/images/keepon.jpg" alt="">
+            <img src="assets/images/keepon.png" alt="">
             </div>
         </div>
     </div>
