to do: flair,dice and token save, i pad bug fix

--- a/games.html
+++ b/games.html
@@ -35,21 +35,21 @@
     </div>
     <div class="container">
         <div class="row">
-            <a href="roulette.html" class="col-3 bg-box roulette">
+            <a href="https://youtu.be/ambaJpTsZ-4?feature=shared" class="col-3 bg-box roulette">
                 <div class="card roulette">
-                    <p>Roulette</p>
+                    <h2>Roulette</h2>
                 </div>
             </a>
         
             <a href="slots.html" class="col-3 bg-box slots">
                 <div class="card slots">
-                    <p>Slot Machines</p>
+                    <h2>Slot Machines</h2>
                 </div>
             </a>
         
-            <a href="plinko.html" class="col-3 bg-box plinko">
+            <a href="https://youtu.be/NfsaIeLprd0?feature=shared" class="col-3 bg-box plinko">
                 <div class="card plinko">
-                    <p>Plinko</p>
+                    <h2>Plinko</h2>
                 </div>
             </a>
         </div>
