--- a/support.html
+++ b/support.html
@@ -34,7 +34,7 @@
         <div class="container hero support-page">
             <br><br><br>
             <h1>🎰 Casino Support Center</h1>
-            <p>Feeling lucky... but something went wrong? We're here to help! Whether you lost your chips, your dignity, or just your login, we’ve got answers.</p>
+            <p>Feeling lucky... but something went wrong? We're here to help! Whether you lost your chips,0r your login, we’ve got answers.</p>
         </div>
         <div class="container support-page">
             <div class="faq">
@@ -42,19 +42,19 @@
                 <ul>
                     <li>
                         <strong>“I spun the wheel and lost everything. Can I get a refund?”</strong><br>
-                        Unfortunately, no. But hey, maybe next time try betting on *yourself*.
+                        No.
                     </li>
                     <li>
                         <strong>“The slot machine glitched!”</strong><br>
-                        Try refreshing the page. If the problem persists, blame RNGesus.
+                        Try refreshing the page. If the problem persists, try something else.
                     </li>
                     <li>
                         <strong>“I forgot my password. What now?”</strong><br>
-                        Click on the "Forgot Password" link on the login page. If that fails, meditate and try to remember your 2015 email password.
+                        Click on the "Forgot Password" link on the login page. If that fails, bad luck.
                     </li>
                     <li>
                         <strong>“How do I cash out?”</strong><br>
-                        You don’t. This is a student portfolio, not an actual casino.
+                        You don’t.
                     </li>
                 </ul>
             </div>
