maybe fixed ios, added flairs, only need buy function now

--- a/support.html
+++ b/support.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casino Support</title>
-    <link rel="stylesheet" href="assets/css/styles.css?v=1.2.3" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.2.4" />
     <link rel="stylesheet" href="assets/fontawesome-free-6.7.2-web/css/all.min.css">
 
 </head>
@@ -34,7 +34,7 @@
         <div class="container hero support-page">
             <br><br><br>
             <h1>🎰 Casino Support Center</h1>
-            <p>Feeling lucky... but something went wrong? We're here to help! Whether you lost your chips,0r your login, we’ve got answers.</p>
+            <p>Feeling lucky... but something went wrong? We're here to help! Whether you lost your chips or your login, we’ve got answers.</p>
         </div>
         <div class="container support-page">
             <div class="faq">
@@ -65,9 +65,9 @@
                 <h2>📨 Contact Us</h2>
                 <p>Still got questions? Contact our fictional support team:</p>
                 <ul>
-                    <li>Email: <a href="mailto:support@fakestudentcasino.com">support@fakestudentcasino.com</a></li>
-                    <li>Discord: <code>@SupportDealer007</code></li>
-                    <li>Office: Behind the vending machine, 2nd floor, Library Wing B</li>
+                    <li>Email: <a href="mailto:support@casino.com">support@casino.com</a></li>
+                    <li>Discord: <code>@Support</code></li>
+                    <li>Office: Max Mustermannstraße 43</li>
                 </ul>
             </div>
         </div>
@@ -84,7 +84,7 @@
                     <label for="issue">Describe Your Issue:</label><br>
                     <textarea id="issue" name="issue" rows="5" required></textarea><br><br>
 
-                    <button type="submit" class="btn">Roll the Dice (Submit)</button>
+                    <button type="submit" class="btn">Complain</button>
                 </form>
             </div>
         </div>
