--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casino Shop</title>
-    <link rel="stylesheet" href="assets/css/styles.css?v=1.2.3" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.2.4" />
     <link rel="stylesheet" href="assets/fontawesome-free-6.7.2-web/css/all.min.css">
 
 </head>
@@ -52,7 +52,24 @@
                 <p>Price: $0.99</p>
                 <button class="buy hover">Buy Now!</button>
             </div>
-            <!-- Repeat for more dice -->
+            <div class="card hover">
+                <img src="assets/images/dice/2.png" alt="Dice Skin 1">
+                <h1>Dice Skin 2</h1>
+                <p>Price: $0.99</p>
+                <button class="buy hover">Buy Now!</button>
+            </div>
+            <div class="card hover">
+                <img src="assets/images/dice/3.png" alt="Dice Skin 1">
+                <h1>Dice Skin 3</h1>
+                <p>Price: $0.99</p>
+                <button class="buy hover">Buy Now!</button>
+            </div>
+            <div class="card hover">
+                <img src="assets/images/dice/4.png" alt="Dice Skin 1">
+                <h1>Dice Skin 4</h1>
+                <p>Price: $0.99</p>
+                <button class="buy hover">Buy Now!</button>
+            </div>
         </div>
     </div>
 
@@ -61,12 +78,35 @@
         <h2 class="title">Flairs & Badges</h2>
         <div class="scrollmenu">
             <div class="card hover">
-                <img src="assets/images/flairs/gold.png" alt="Gold Flair">
-                <h1>Gold Flair</h1>
+                <img src="assets/images/flairs/flair_1.jpg" alt="Gold Flair">
+                <h1>Star Flair 1</h1>
                 <p>Price: $1.49</p>
                 <button class="buy hover">Buy Now!</button>
             </div>
-            <!-- Add more flairs here -->
+            <div class="card hover">
+                <img src="assets/images/flairs/flair_2.jpg" alt="Gold Flair">
+                <h1>Star Flair 2</h1>
+                <p>Price: $1.49</p>
+                <button class="buy hover">Buy Now!</button>
+            </div>
+            <div class="card hover">
+                <img src="assets/images/flairs/flair_3.jpg" alt="Gold Flair">
+                <h1>Star Flair 3</h1>
+                <p>Price: $1.49</p>
+                <button class="buy hover">Buy Now!</button>
+            </div>
+            <div class="card hover">
+                <img src="assets/images/flairs/flair_4.jpg" alt="Gold Flair">
+                <h1>Star Flair 4</h1>
+                <p>Price: $1.49</p>
+                <button class="buy hover">Buy Now!</button>
+            </div>
+            <div class="card hover">
+                <img src="assets/images/flairs/flair_5.jpg" alt="Gold Flair">
+                <h1>Star Flair 5</h1>
+                <p>Price: $1.49</p>
+                <button class="buy hover">Buy Now!</button>
+            </div>
         </div>
     </div>
 
